# Ragkno

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml  requirement.txt
evaluation/: ragas_eval.py  testset.sample.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/styles/: app.css  chat.css  data.css  home.css
src/: chat_memory.py  data_loader.py  drive_loader.py  embedding.py  ingest.py  search.py  vectorstore.py
